--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./style.css">
     <title>sewinglaby</title>
     <!-- Start of Async Drift Code -->
-<script>
+<!-- <script>
     "use strict";
     
     !function() {
@@ -38,7 +38,8 @@
     drift.SNIPPET_VERSION = '0.3.1';
     drift.load('irkxibwkdvnh');
     </script>
-    <!-- End of Async Drift Code -->
+    End of Async Drift Code -->
+    <script src="//code.tidio.co/uposv7cio27y8jtn2nrj0xgtb5b6gsdl.js" async></script>
     
 </head>
 
