--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     drift.load('irkxibwkdvnh');
     </script>
     End of Async Drift Code -->
-    <script src="//code.tidio.co/uposv7cio27y8jtn2nrj0xgtb5b6gsdl.js" async></script>
+   
     
 </head>
 
@@ -202,7 +202,8 @@
 
             </div>
     </section>
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script> -->
+    <script src="//code.tidio.co/uposv7cio27y8jtn2nrj0xgtb5b6gsdl.js" async></script>
 
 </body>
 
