--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
             </div>
     </section>
-    <!-- <script src="./app.js"></script> -->
+    <script src="./app.js"></script>
     <script src="//code.tidio.co/uposv7cio27y8jtn2nrj0xgtb5b6gsdl.js" async></script>
 
 </body>
